added events page

--- a/Pages/templates/navbar.html
+++ b/Pages/templates/navbar.html
@@ -9,7 +9,7 @@
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link" href="#">Shows</a>
-          <a class="nav-link" href="#">Events</a>
+          <a class="nav-link" href="{% url 'events' %}">Events</a>
           <a class="nav-link" href="#">Our Team</a>
         </div>
       </div>
