--- a/Pages/templates/navbar.html
+++ b/Pages/templates/navbar.html
@@ -8,7 +8,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" href="#">Shows</a>
+          <a class="nav-link" href="{% url 'shows' %}">Shows</a>
           <a class="nav-link" href="{% url 'events' %}">Events</a>
           <a class="nav-link" href="#">Our Team</a>
         </div>
