--- a/Pages/templates/events.html
+++ b/Pages/templates/events.html
@@ -10,7 +10,7 @@
                 <h6 class="card-subtitle mb-2 text-body-secondary">{{ event.location }}</h6>
                 <p class="card-text">{{ event.date }}</p>
                 <p class="card-text">{{ event.time }}</p>
-                <a href="#" class="card-link">More Info</a>
+                <a href="{% url 'event-info' event.pk %}" class="card-link">More Info</a>
             </div>
         </div>
     {% endfor %}
