--- a/Pages/templates/Pages/home.html
+++ b/Pages/templates/Pages/home.html
@@ -1,5 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Hello World!</h1>
+    <h1>Listen Live</h1>
+
+    <div>
+        <audio controls>
+            <source src="https://stream.radiojar.com/vpb6u29g27zuv.mp3">
+        </audio>
+    </div>
 {% endblock %}
